--- a/i2c/i2c-tools-3.1.0/tools.cortex/makefile
+++ b/i2c/i2c-tools-3.1.0/tools.cortex/makefile
@@ -36,6 +36,7 @@ CXX=arm-uclinuxeabi-g++
 MIPSE=MIPSEL
 EXTRAFLAGS=
 CFLAGS=-c  -I. -I../include -D$(MIPSE) -DPROTOCOL=1 -I$(INSTALL_ROOT)/A2F/root/usr/include -g -O2 -mcpu=cortex-m3 -mthumb -L/rcu2/release/linux-cortexm-1.11.0/A2F/root/usr/lib -pthread  
+#CFLAGS=-c  -I$(INSTALL_ROOT)/linux/include -D$(MIPSE) -DPROTOCOL=1 -I$(INSTALL_ROOT)/A2F/root/usr/include -g -O2 -mcpu=cortex-m3 -mthumb -L$(INSTALL_ROOT)/A2F/root/usr/lib -pthread  
 LDFLAGS=-L. -mcpu=cortex-m3 -mthumb -L${INSTALL_ROOT}/A2F/root/usr/lib -pthread
 
 
